--- a/hurumap_ng/templates/blocks/partners.html
+++ b/hurumap_ng/templates/blocks/partners.html
@@ -3,9 +3,13 @@
       <h2>Partners</h2>
       <p>This platform is made possible through support from the following partners:</p>
 
-      <a href="//codeforafrica.org/" target="_blank" rel="noopener">
+      <a href="//codeforafrica.org" target="_blank" rel="noopener">
         <img src="{{ STATIC_URL }}img/logos/cfafrica.png" alt="Code for Africa"></a>
-      <a href="//www.nan.ng/" target="_blank" rel="noopener">
+      <a href="//brown.stanford.edu" target="_blank" rel="noopener">
+        <img src="{{ STATIC_URL }}img/logos/brown.png" alt="The Brown Institute for Media Innovation"></a>
+      <a href="//www.nan.ng" target="_blank" rel="noopener">
         <img src="{{ STATIC_URL }}img/logos/nan.png" alt="News Agency of Nigeria"></a>
+      <a href="//www.nigerianstat.gov.ng" target="_blank" rel="noopener">
+        <img src="{{ STATIC_URL }}img/logos/nbs.png" alt="National Bureau of Statistics"></a>
     </div>
 </div>
