--- a/hurumap_tz/templates/profile/profile_detail.html
+++ b/hurumap_tz/templates/profile/profile_detail.html
@@ -18,7 +18,7 @@
           </li>
           <li><a href="#health"><i class="fa fa-medkit"></i>
             <span>Health</span></a></li>
-            <li><a href="#crime"><i class="fa fa-shield"></i>
+            <li><a href="#crimes"><i class="fa fa-shield"></i>
               <span>Crimes</span></a></li>
           {% if not afrobarometer.is_missing %}
             <li><a href="#afrobarometer"><i class="fa fa-signal"></i>
