--- a/hurumap_ng/templates/profile/profile_detail.html
+++ b/hurumap_ng/templates/profile/profile_detail.html
@@ -49,7 +49,7 @@
           <h2>
             <a class="permalink" href="#birth_registration" id="birth_registration">
               Birth Registration<i class="fa fa-link"></i></a></h2>
-          <div class="column-full">
+          <div class="column-half">
               <div id="chart-pie-demographics-birth_registration"
                    data-chart-title="Propotion of Birth Registration"
                    data-stat-type="number"
@@ -92,8 +92,8 @@
         {% if not demographics.compiled_indeces.is_missing %}
         <section class="clearfix stat-row">
           <h2>
-            <a class="permalink" href="#human-development-indeces" id="human-development-indeces">
-              Human Development Indeces<i class="fa fa-link"></i></a></h2>
+            <a class="permalink" href="#human-development-indeces" id="human-development-indices">
+              Human Development Indices<i class="fa fa-link"></i></a></h2>
           <div class="column-full">
               <div id="chart-column-demographics-compiled_indeces"
                    data-chart-title="Human Development Indices"
