--- a/dominion/templates/homepage.html
+++ b/dominion/templates/homepage.html
@@ -1,7 +1,7 @@
 {% extends 'homepage.html' %}{% load sass_tags humanize partition static %}
 
 {% block head_meta_description %}{{ HURUMAP.name }} provides useful facts and
-data about land ownership in South Africa. Compare places using tables and maps,
+data about land ownership. Compare places using tables and maps,
 download data, and embed charts on your site.{% endblock %}
 
 {% block header %}
