--- a/hurumap_zw/templates/_base.html
+++ b/hurumap_zw/templates/_base.html
@@ -23,3 +23,16 @@
   <meta name="msapplication-config" content="{{ STATIC_URL }}img/icons/favicon/browserconfig.xml?v=wAXNqxv0mP">
   <meta name="theme-color" content="#ffffff">
 {% endblock %}
+
+{% block head_javascript_extra %}
+  {{ block.super }}
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-3WHFFPRFVZ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-3WHFFPRFVZ');
+  </script>
+
+{% endblock %}
