--- a/hurumap_zw/templates/_base.html
+++ b/hurumap_zw/templates/_base.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block header_logo %}
-  <img src="{% static 'img/cite-long.png' %}">
+  <img src="{% static 'img/logos/ulwazimap.png' %}">
 {% endblock %}
 
 {% block favicon %}
