--- a/hurumap_ng/templates/profile/profile_detail.html
+++ b/hurumap_ng/templates/profile/profile_detail.html
@@ -557,19 +557,51 @@
         {% endif %}
         {% if not finance.faac.is_missing %}
         <section class="clearfix stat-row">
-          <div class="column-full">
-              <div id="chart-column-finance-faac"
-                   data-chart-title="Federation Account Allocation Committee (FAAC) Allocation for January 2019 in Million ₦"
+            <h2 class="header-for-columns">
+                <a class="permalink">
+                  <strong>Federation Account Allocation Committee (FAAC) Allocation</strong><i class="fa fa-link"></i></a>
+              </h2>
+          <div class="column-half">
+              <div id="chart-pie-finance-faac"
+                   data-chart-title="FAAC Allocation for January 2019 in Million ₦"
                    data-stat-type="number"
                    data-source-title="National Bureau of Statistics, 2019"
                    data-source-link="https://nigerianstat.gov.ng/download/614"></div>
+          </div>
+          <div class="column-half">
+              <div id="chart-column-finance-faac_yearly-2019"
+                    data-chart-title="FAAC Allocation 2019 in Million ₦"
+                    data-stat-type="number"
+                    data-source-title="National Bureau of Statistics, 2019"
+                    data-source-link="https://nigerianstat.gov.ng/download/614"></div>
+          </div>
+          <div class="column-full stat-row">
+              <div id="chart-column-finance-faac_yearly-2018"
+                    data-chart-title="FAAC Allocation 2018 in Million ₦"
+                    data-stat-type="number"
+                    data-source-title="National Bureau of Statistics, 2019"
+                    data-source-link="https://nigerianstat.gov.ng/download/614"></div>
+          </div>
+          <div class="column-full stat-row">
+              <div id="chart-column-finance-faac_yearly-2017"
+                    data-chart-title="FAAC Allocation 2017 in Million ₦"
+                    data-stat-type="number"
+                    data-source-title="National Bureau of Statistics, 2019"
+                    data-source-link="https://nigerianstat.gov.ng/download/614"></div>
+          </div>
+          <div class="column-full stat-row">
+              <div id="chart-column-finance-faac_yearly-2016"
+                    data-chart-title="FAAC Allocation 2016 in Million ₦"
+                    data-stat-type="number"
+                    data-source-title="National Bureau of Statistics, 2019"
+                    data-source-link="https://nigerianstat.gov.ng/download/614"></div>
             </div>
         </section>
         {% endif %}
       </div>
     </article>
   {% endif %}
-  
+
   {% if not others.is_missing %}
     <article id="others" class="clearfix">
       <header class="section-contents"><h1>Others</h1></header>
